# SoftwareProjectClass

./: README.md
Nim/: README.md  main.c  main_aux.c  main_aux.h  sp_nim.c  sp_nim.h
Sudoku/: CMakeLists.txt  CommandExecutioner.c  CommandExecutioner.h  ErrorHandler.c  ErrorHandler.h  FileHandler.c  FileHandler.h  Game.c  Game.h  HistoryHandler.c  HistoryHandler.h  MainAux.c  MainAux.h  Makefile  Parser.c  Parser.h  ParserUtils.c  ParserUtils.h  README.md  Solver.c  Solver.h  SolverUtils.c  SolverUtils.h  main.c
Sudoku/Tests/: 123.txt  1234.txt  HW3
Sudoku/Tests/HW3_new_tester/: test.sh
Sudoku/Tests/HW3_new_tester/tests/: 10.in  12.in  13.in  15.in  17.in  18.in  2.in  20.in  21.in  22.in  23.in  24.in  25.in  26.in  27.in  28.in  29.in  3.in  30.in  31.in  32.in  33.in  34.in  35.in  36.in  37.in  38.in  4.in  5.in  6.in  7.in  8.in
Sudoku/Tests/HW3_test/: test.sh
Sudoku/Tests/HW3_test/tests/: 1.in  11.in  14.in  16.in
